--- a/PruebaInterfaz_Copia/src/vista/Interfaz_Admin.form
+++ b/PruebaInterfaz_Copia/src/vista/Interfaz_Admin.form
@@ -1307,15 +1307,16 @@
             <Component class="javax.swing.JComboBox" name="ComboBox_Asociar">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Jorge&quot;, &quot;Ester&quot;, &quot;Pepe&quot;, &quot;Jordi&quot;, &quot;Palmira&quot; })" type="code"/>
+                  <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;()" type="code"/>
                 </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ComboBox_AsociarActionPerformed"/>
               </Events>
               <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;Proyecto&gt;()"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="ComboBox_Asociar.setEditable(true);"/>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Proyecto&gt;"/>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
